@@ -104,7 +104,8 @@ JFIELD_LANGUAGE_LABEL=Language
 JFIELD_OPTION_NONE=None
 
 JACTION_ADMIN=Admin
-JACTION_LOGIN=Login
+JACTION_LOGIN_SITE=Site Login
+JACTION_LOGIN_ADMIN=Admin Login
 JACTION_MANAGE=Manage
 JACTION_CREATE=Create
 JACTION_DELETE=Delete
