@@ -26,32 +26,32 @@ CREATE TABLE IF NOT EXISTS `#__assets` (
 
 INSERT INTO `#__assets` (`id`, `parent_id`, `lft`, `rgt`, `level`, `name`, `title`, `rules`)
 VALUES
-	(1,0,1,74,0,'root.1','Root Asset','{"core.admin":{"8":1},"core.login":{"2":1},"core.manage":{"7":1},"core.create":{"7":1},"core.delete":{"7":1},"core.edit":{"7":1},"core.edit.state":{"7":1}}'),
+	(1,0,1,80,0,'root.1','Root Asset','{"core.login.site":{"6":1,"2":1},"core.login.admin":{"6":1},"core.admin":{"8":1},"core.manage":{"7":1,"10":1},"core.create":{"6":1},"core.delete":{"6":1},"core.edit":{"6":1},"core.edit.state":{"6":1}}'),
 	(2,1,2,3,1,'com_admin','com_admin','{}'),
-	(3,1,4,5,1,'com_banners','com_banners','{"core.admin":{"7":1,"6":0},"core.manage":[],"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
-	(4,1,6,7,1,'com_cache','com_cache','{""core.admin":{"7":1,"6":0},core.manage":{"6":0}}'),
-	(5,1,8,9,1,'com_checkin','com_checkin','{""core.admin":{"7":1,"6":0},core.manage":{"6":0}}'),
+	(3,1,4,5,1,'com_banners','com_banners','{"core.admin":{"7":1},"core.manage":{"6":1},"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
+	(4,1,6,7,1,'com_cache','com_cache','{"core.admin":{"7":1},"core.manage":{"7":1}}'),
+	(5,1,8,9,1,'com_checkin','com_checkin','{"core.admin":{"7":1},"core.manage":{"7":1}}'),
 	(6,1,10,11,1,'com_config','com_config','{}'),
-	(7,1,12,13,1,'com_contact','com_contact','{"core.admin":{"7":1,"6":0},"core.manage":[],"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
-	(8,1,14,31,1,'com_content','com_content','{"core.admin":{"7":1,"6":0},"core.manage":[],"core.create":{"5":1},"core.delete":[],"core.edit":{"5":1,"3":0},"core.edit.state":{"5":1,"4":0}}'),
-	(9,1,32,33,1,'com_cpanel','com_cpanel','{}'),
-	(10,1,34,35,1,'com_installer','com_installer','{"core.admin":{"7":1,"6":0},"core.manage":{"6":0},"core.create":[],"core.delete":[],"core.edit.state":[]}'),
-	(11,1,36,37,1,'com_languages','com_languages','{"core.admin":{"7":1,"6":0},"core.manage":{"6":0},"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
-	(12,1,38,39,1,'com_login','com_login','{}'),
-	(13,1,40,41,1,'com_mailto','com_mailto','{}'),
-	(14,1,42,43,1,'com_massmail','com_massmail','{}'),
-	(15,1,44,45,1,'com_media','com_media','{"core.admin":{"7":1,"6":0},"core.manage":[],"core.create":{"3":1,"4":1,"5":1},"core.delete":{"5":1},"core.edit":[],"core.edit.state":[]}'),
-	(16,1,46,47,1,'com_menus','com_menus','{"core.admin":{"7":1,"6":0},"core.manage":{"6":0},"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
-	(17,1,48,49,1,'com_messages','com_messages','{}'),
-	(18,1,50,51,1,'com_modules','com_modules','{"core.admin":{"7":1,"6":0},"core.manage":{"6":0},"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
-	(19,1,52,53,1,'com_newsfeeds','com_newsfeeds','{"core.admin":{"7":1,"6":0},"core.manage":[],"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
-	(20,1,54,55,1,'com_plugins','com_plugins','{"core.admin":{"7":1,"6":0},"core.manage":{"6":0},"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
-	(21,1,56,57,1,'com_redirect','com_redirect','{"core.admin":{"7":1,"6":0},"core.manage":{"7":1,"6":0}}'),
-	(22,1,58,59,1,'com_search','com_search','{"core.admin":{"7":1,"6":0},"core.manage":[]}'),
-	(23,1,60,61,1,'com_templates','com_templates','{"core.admin":{"7":1,"6":0},"core.manage":{"7":0,"6":0},"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
-	(24,1,62,63,1,'com_users','com_users','{"core.admin":{"7":1,"6":0},"core.manage":{"6":0},"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
-	(25,1,64,71,1,'com_weblinks','com_weblinks','{"core.admin":{"7":1,"6":0},"core.manage":[],"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
-	(26,1,72,73,1,'com_wrapper','com_wrapper','{}');
+	(7,1,12,15,1,'com_contact','com_contact','{"core.admin":{"7":1},"core.manage":{"6":1},"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
+	(8,1,16,33,1,'com_content','com_content','{"core.admin":{"7":1},"core.manage":{"6":1},"core.create":{"3":1,"5":1},"core.delete":[],"core.edit":{"4":1},"core.edit.state":{"5":1}}'),
+	(9,1,34,35,1,'com_cpanel','com_cpanel','{}'),
+	(10,1,36,37,1,'com_installer','com_installer','{"core.admin":{"7":1},"core.manage":{"7":1},"core.create":[],"core.delete":[],"core.edit.state":[]}'),
+	(11,1,38,39,1,'com_languages','com_languages','{"core.admin":{"7":1},"core.manage":[],"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
+	(12,1,40,41,1,'com_login','com_login','{}'),
+	(13,1,42,43,1,'com_mailto','com_mailto','{}'),
+	(14,1,44,45,1,'com_massmail','com_massmail','{}'),
+	(15,1,46,47,1,'com_media','com_media','{"core.admin":{"7":1},"core.manage":{"6":1},"core.create":{"3":1,"4":1,"5":1},"core.delete":{"5":1},"core.edit":[],"core.edit.state":[]}'),
+	(16,1,48,49,1,'com_menus','com_menus','{"core.admin":{"7":1},"core.manage":[],"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
+	(17,1,50,51,1,'com_messages','com_messages','{}'),
+	(18,1,52,53,1,'com_modules','com_modules','{"core.admin":{"7":1},"core.manage":[],"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
+	(19,1,54,57,1,'com_newsfeeds','com_newsfeeds','{"core.admin":{"7":1},"core.manage":{"6":1},"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
+	(20,1,58,59,1,'com_plugins','com_plugins','{"core.admin":{"7":1},"core.manage":[],"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
+	(21,1,60,61,1,'com_redirect','com_redirect','{"core.admin":{"7":1},"core.manage":[]}'),
+	(22,1,62,63,1,'com_search','com_search','{"core.admin":{"7":1},"core.manage":{"6":1}}'),
+	(23,1,64,65,1,'com_templates','com_templates','{"core.admin":{"7":1},"core.manage":[],"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
+	(24,1,66,67,1,'com_users','com_users','{"core.admin":{"7":1},"core.manage":[],"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
+	(25,1,68,75,1,'com_weblinks','com_weblinks','{"core.admin":{"7":1},"core.manage":{"6":1},"core.create":[],"core.delete":[],"core.edit":[],"core.edit.state":[]}'),
+	(26,1,76,77,1,'com_wrapper','com_wrapper','{}');
 
 # -------------------------------------------------------
 
@@ -903,14 +903,14 @@ CREATE TABLE IF NOT EXISTS `#__usergroups` (
 
 INSERT INTO `#__usergroups` (`id` ,`parent_id` ,`lft` ,`rgt` ,`title`)
 VALUES
-	(1,0,1,18,'Public'),
-	(2,1,2,17,'Registered'),
-	(3,4,11,12,'Author'),
-	(4,5,10,13,'Editor'),
-	(5,2,9,14,'Publisher'),
-	(6,7,4,5,'Manager'),
-	(7,2,3,6,'Administrator'),
-	(8,2,15,16,'Super Users');
+	(1,0,1,20,'Public'),
+	(2,1,8,19,'Registered'),
+	(3,2,11,16,'Author'),
+	(4,3,12,15,'Editor'),
+	(5,4,13,14,'Publisher'),
+	(6,1,2,7,'Manager'),
+	(7,6,3,6,'Administrator'),
+	(8,7,4,5,'Super Users');
 
 # -------------------------------------------------------
 
